Add click-to-copy function for time

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,8 +1,24 @@
-.timerText {
+.timerTextDiv {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   margin-right: 15px;
+}
+
+.timerText {
   margin-bottom: 0;
   align-self: center;
   user-select: none;
+  cursor: pointer;
+  position: relative;
+}
+
+.copyText {
+  position: absolute;
+  bottom: 23px;
+  text-align: center;
+  font-size: 10px;
 }
 
 .timerSpan {
@@ -10,6 +26,7 @@
   user-select: none;
   width: 150px;
   box-sizing: border-box;
+  display: block;
 }
 
 .timerButton {
