Change DOM element generation from jQuery to JSX
Using dom-chef to build DOM elements instead of using jQuery

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -66,7 +66,13 @@
 .timerButtonLabel {
   margin-bottom: 0px;
   width: 105px;
-  text-align: start;
+  text-align: center;
+}
+
+.resetButtonLabel {
+  margin-bottom: 0px;
+  width: 105px;
+  text-align: center;
 }
 
 .optionDiv {
